[package]
name = "notion-telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
notion-flows = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio_wasi = { version = "1.25.0", features = ["rt", "macros"] }
flowsnet-platform-sdk = "0.1"
log = "0.4"