[package]
name = "github-func-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
github-flows = "0.7"
tokio_wasi = "1.25.1"
flowsnet-platform-sdk = "0.1"
log = "0.4.17"
serde_json = "1"
async-openai-wasi = "0.16"
store-flows = "0.3.1"
