[package]
name = "weather-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
http_req_wasi = { version = "0.11" }
webhook-flows = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio_wasi = { version = "1.25.0", features = ["rt", "macros", "time"] }
flowsnet-platform-sdk = "0.1.5"
log = "0.4.20"
chrono = "0.4.31"
openai-flows = "0.9"
async-openai-wasi = "0.16"
sendgrid-wasi = "0.19"
airtable-api-wasi = "0.2"
